criar chamada constante para service que pega alterações do socket

--- a/src/app/lancar-produto/lancar-produto.component.html
+++ b/src/app/lancar-produto/lancar-produto.component.html
@@ -9,3 +9,4 @@
 <input type="number" [(ngModel)]="produto.valorInicial">
 <br>
 <button (click)="iniciarLeilao()">Iniciar Leilão</button>
+<a href="/">Voltar</a>
