--- a/src/app/leiloes/leiloes.component.html
+++ b/src/app/leiloes/leiloes.component.html
@@ -3,3 +3,4 @@
 <ng-container *ngFor="let produto of produtos">
   <app-leilao [produto]="produto"></app-leilao>
 </ng-container>
+<a href="/lancamento">Iniciar Meu Leilão</a>
